--- a/src/components/main.css
+++ b/src/components/main.css
@@ -425,7 +425,7 @@ color:  #ff4D00;
   cursor: pointer;
   }
   
-  .button-cta:hover {
+  .button-cta-linktree:hover {
   background-color:  white;
   color:  #2b3647;
   }
